se avanza en home

--- a/home.html
+++ b/home.html
@@ -9,63 +9,88 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
+
+    <section class="baner">
+        <h3 class="text-white">Bienvenidos a Ramos de Amor </h3>
+        <p class="text-white fw-bold">Aqui encontraras todo lo relacionado con rosas , tu mismo podras armar tu ramo como desees</p>
+        <a class="btn btn-outline-primary" href="#aliados">Ver mas</a>
+    </section>
     
     <section class="container my-5"> 
-        <div class="row row-cols-1 row-cols-md-3">
+        <div class="row row-cols-1 row-cols-md-3 g-3">
 
             <div class="col">
-                <div class="card h-100 shadow">
+                <div class="card h-100 shadow p-5">
                     <img src="IMG/producto1.jpg" alt="img-fluid">
                     <h2>Rosas</h2>
+                    <p>Rosas eternas ,color lila</p>
                     <hr>
                     <h3>$60.000</h3>
+                    <button class="btn btn-outline-primary">Comprar</button>
                 </div>
             </div>
 
             <div class="col">
-                <div class="card h-100 shadow">
+                <div class="card h-100 shadow p-5">
                     <img src="IMG/producto2.jpg" alt="img-fluid">
                     <h2>Rosas</h2>
+                    <p>Rosas color rosado y lila , rellenas de chocolate</p>
                     <hr>
                     <h3>$55.000</h3>
+                    <button class="btn btn-outline-primary">Comprar</button>
                 </div>
             </div>
 
             <div class="col">
-                <div class="card h-100 shadow">
+                <div class="card h-100 shadow p-5">
                     <img src="IMG/producto3.jpg" alt="img-fluid">
                     <h2>Rosas</h2>
                     <hr>
                     <h3>$60.000</h3>
+                    <button class="btn btn-outline-primary">Comprar</button>
                 </div>
             </div>
 
             <div class="col">
-                <div class="card h-100 shadow">
+                <div class="card h-100 shadow p-5">
                     <img src="IMG/producto4.jpg" alt="img-fluid">
                     <h2>Rosas</h2>
                     <hr>
                     <h3>$70.000</h3>
+                    <button class="btn btn-outline-primary">Comprar</button>
                 </div>
             </div>
 
             <div class="col">
-                <div class="card h-100 shadow">
+                <div class="card h-100 shadow p-5">
                     <img src="IMG/producto5.jpg" alt="img-fluid">
                     <h2>Rosas</h2>
                     <hr>
                     <h3>$60.000</h3>
+                    <button class="btn btn-outline-primary">Comprar</button>
                 </div>
             </div>
 
             <div class="col">
-                <div class="card h-100 shadow">
+                <div class="card h-100 shadow p-5">
                     <img src="IMG/producto6.jpg" alt="img-fluid">
                     <h2>Rosas</h2>
                     <hr>
                     <h3>$80.000</h3>
+                    <button class="btn btn-outline-primary">Comprar</button>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="container">
+        <div class="row">
+            <div class="col-12 text-center my-5">
+                <h3 id="aliados">NUESTROS ALIADOS</h3>
+                <P>Contamos con los mejores aliados</P>
+
+            </div>
+
         </div>
     </section>
 
