--- a/home.html
+++ b/home.html
@@ -10,6 +10,35 @@
 </head>
 <body>
 
+
+    <header class="p1">
+        <nav class="navbar navbar-expand-lg background black">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="img/ramos de amor.png" alt="" class="p3">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="empleados.html">Empleados</a>
+                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  </li> -->
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
     <section class="baner">
         <h3 class="text-white">Bienvenidos a Ramos de Amor </h3>
         <p class="text-white fw-bold">Aqui encontraras todo lo relacionado con rosas , tu mismo podras armar tu ramo como desees</p>
@@ -93,6 +122,33 @@
 
         </div>
     </section>
+
+    <section class="container my-5"> 
+        <div class="row row-cols-md-1 row-cols-md-4 g-5">
+
+            <div class="col">
+                <div class="card h-100 shadow p-5">
+                    <img src="img/distribuidor1.jpg" alt="img-fluid">
+                    <h2>Rosas.comm</h2>
+        
+                    <hr>
+                    <h3>$60.000</h3>
+                    <button class="btn btn-outline-primary">Comprar</button>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100 shadow p-5">
+                    <img src="IMG/producto2.jpg" alt="img-fluid">
+                    <h2>Rosas</h2>
+                    <p>Rosas color rosado y lila , rellenas de chocolate</p>
+                    <hr>
+                    <h3>$55.000</h3>
+                    <button class="btn btn-outline-primary">Comprar</button>
+                </div>
+            </div>
+</section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
